# aimbot-hunter

./: .gitignore  README.md
.github/workflows/: release.yml
python-brain/: aimbot-hunter.ipynb  aimbot_hunter_model (1).h5  app.py  export_to_rust.py  requirements.txt  scaler (1).save
rust-tools/: Cargo.toml
rust-tools/aimbot-api/: Cargo.toml  config.json  dashboard.py  model.onnx  test_attack.py
rust-tools/aimbot-api/src/: main.rs
rust-tools/bezier-bot/: Cargo.toml
rust-tools/bezier-bot/src/: main.rs
rust-tools/data-forge/: Cargo.toml
rust-tools/data-forge/src/: main.rs
rust-tools/linear-bot/: Cargo.toml
rust-tools/linear-bot/src/: main.rs
rust-tools/mouse-logger/: Cargo.toml
rust-tools/mouse-logger/src/: main.rs
