[package]
name = "aimbot-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
ort = { version = "2.0.0-rc.9", features = ["load-dynamic", "ndarray"] }
ndarray = "0.15.6"